// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DraftModComponentListItem renders active element 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="root list-group-item active"
    >
      <span
        class="icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-mouse-pointer fa-w-10 fa-fw "
          data-icon="mouse-pointer"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M302.189 329.126H196.105l55.831 135.993c3.889 9.428-.555 19.999-9.444 23.999l-49.165 21.427c-9.165 4-19.443-.571-23.332-9.714l-53.053-129.136-86.664 89.138C18.729 472.71 0 463.554 0 447.977V18.299C0 1.899 19.921-6.096 30.277 5.443l284.412 292.542c11.472 11.179 3.007 31.141-12.5 31.141z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="name"
      >
        Element 1
      </span>
      <div
        class="root"
      >
        <button
          aria-label="Element 1 - Save"
          class="button save btn btn-primary"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-save fa-w-14 "
            data-icon="save"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
              fill="currentColor"
            />
          </svg>
        </button>
        <span>
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Element 1 - Ellipsis"
            class="szh-menu-button button ellipsisMenu"
            data-testid="ellipsis-menu-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-ellipsis-v fa-w-6 "
              data-icon="ellipsis-v"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 192 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`DraftModComponentListItem renders not active element 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="root list-group-item"
    >
      <span
        class="icon"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-mouse-pointer fa-w-10 fa-fw "
          data-icon="mouse-pointer"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M302.189 329.126H196.105l55.831 135.993c3.889 9.428-.555 19.999-9.444 23.999l-49.165 21.427c-9.165 4-19.443-.571-23.332-9.714l-53.053-129.136-86.664 89.138C18.729 472.71 0 463.554 0 447.977V18.299C0 1.899 19.921-6.096 30.277 5.443l284.412 292.542c11.472 11.179 3.007 31.141-12.5 31.141z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="name"
      >
        Element 1
      </span>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
